# pkg/apis/core/v1beta1/types.go
@@ -306,10 +306,9 @@ type CDIConfig struct {
 }
 
 //FilesystemOverhead defines the reserved size for PVCs with VolumeMode: Filesystem
-// +k8s:deepcopy-gen:interfaces=k8s.io/apimachinery/pkg/runtime.Object
 type FilesystemOverhead struct {
-	global                   *string                      `json:"uploadProxyURL,omitempty"`
-	storageClass             []string                     `json:"uploadProxyURL,omitempty"`
+	Global                   string                       `json:"global,omitempty"`
+	StorageClass             []string                     `json:"storageClass,omitempty"`
 }
 
 //CDIConfigSpec defines specification for user configuration
@@ -318,7 +317,7 @@ type CDIConfigSpec struct {
 	ScratchSpaceStorageClass *string                      `json:"scratchSpaceStorageClass,omitempty"`
 	PodResourceRequirements  *corev1.ResourceRequirements `json:"podResourceRequirements,omitempty"`
 	FeatureGates             []string                     `json:"featureGates,omitempty"`
-//	FilesystemOverhead       *filesystemOverhead          `json:"filesystemOverhead,omitempty"`
+	FilesystemOverhead       *FilesystemOverhead          `json:"filesystemOverhead,omitempty"`
 }
 
 //CDIConfigStatus provides
@@ -326,7 +325,7 @@ type CDIConfigStatus struct {
 	UploadProxyURL                 *string                      `json:"uploadProxyURL,omitempty"`
 	ScratchSpaceStorageClass       string                       `json:"scratchSpaceStorageClass,omitempty"`
 	DefaultPodResourceRequirements *corev1.ResourceRequirements `json:"defaultPodResourceRequirements,omitempty"`
-//	FilesystemOverhead             *filesystemOverhead          `json:"filesystemOverhead,omitempty"`
+	FilesystemOverhead             *FilesystemOverhead          `json:"filesystemOverhead,omitempty"`
 }
 
 //CDIConfigList provides the needed parameters to do request a list of CDIConfigs from the system
